✨ Set up contest route
