# backend/src/swagger.json
@@ -157,6 +157,32 @@
           }
         },
         "required": ["published", "source", "details", "content", "answer"]
+      },
+      "Contest": {
+        "type": "object",
+        "properties": {
+          "title": { "type": "string" },
+          "mode": { "type": "string" },
+          "description": { "type": "string" },
+          "sponsor": { "type": "string" },
+
+          "problems": [
+            {
+              "id": { "type": "string" }
+            }
+          ],
+          "startTime": { "type": "string", "format": "date" },
+          "duration": { "type": "number" },
+          "participants": [
+            {
+              "id": { "type": "string" },
+              "registeredAt": { "type": "string", "format": "date" }
+            }
+          ],
+          "creator": {
+            "id": { "type": "string" }
+          }
+        }
       }
     }
   },
@@ -936,6 +962,297 @@
                     "short": {
                       "correct": "3"
                     }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/contests": {
+      "post": {
+        "summary": "Create a new contest",
+        "tags": ["Contests"],
+        "requestBody": {
+          "description": "Contest data",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Contest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully created a new contest",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "5f7f5f5f5f5f5f5f5f5f5f5e",
+                  "title": "Physics Contest Week 3",
+                  "mode": "marathon",
+                  "description": "Don't Miss It. Starts on Monday April 19, 2023 at 00:00:00LT",
+                  "sponsor": "Sponsored by Birhanu Nega",
+
+                  "problems": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5f"
+                    }
+                  ],
+                  "startTime": "2023-12-06T15:16:10.583Z",
+                  "duration": "200",
+                  "participants": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5c",
+                      "registeredAt": "2023-12-06T15:16:10.583Z"
+                    }
+                  ],
+                  "creator": {
+                    "id": "5f7f5f5f5f5f5f5f5f5f5f5c"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all contests",
+        "tags": ["Contests"],
+        "responses": {
+          "200": {
+            "description": "Successfully get all contests",
+            "content": {
+              "application/json": {
+                "example": [
+                  {
+                    "_id": "5f7f5f5f5f5f5f5f5f5f5f5e",
+                    "title": "Physics Contest Week 3",
+                    "mode": "marathon",
+                    "description": "Don't Miss It. Starts on Monday April 19, 2023 at 00:00:00LT",
+                    "sponsor": "Sponsored by Birhanu Nega",
+
+                    "problems": [
+                      {
+                        "id": "5f7f5f5f5f5f5f5f5f5f5f5f"
+                      }
+                    ],
+                    "startTime": "2023-12-06T15:16:10.583Z",
+                    "duration": "200",
+                    "participants": [
+                      {
+                        "id": "5f7f5f5f5f5f5f5f5f5f5f5c",
+                        "registeredAt": "2023-12-06T15:16:10.583Z"
+                      }
+                    ],
+                    "creator": {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5c"
+                    }
+                  }
+                ]
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/contests/{id}": {
+      "get": {
+        "summary": "Get contest by id",
+        "tags": ["Contests"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Contest id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully get contest by id",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "5f7f5f5f5f5f5f5f5f5f5f5e",
+                  "title": "Physics Contest Week 3",
+                  "mode": "marathon",
+                  "description": "Don't Miss It. Starts on Monday April 19, 2023 at 00:00:00LT",
+                  "sponsor": "Sponsored by Birhanu Nega",
+
+                  "problems": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5f"
+                    }
+                  ],
+                  "startTime": "2023-12-06T15:16:10.583Z",
+                  "duration": "200",
+                  "participants": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5c",
+                      "registeredAt": "2023-12-06T15:16:10.583Z"
+                    }
+                  ],
+                  "creator": {
+                    "id": "5f7f5f5f5f5f5f5f5f5f5f5c"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete contest by id",
+        "tags": ["Contests"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Contest id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully delete contest by id",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "5f7f5f5f5f5f5f5f5f5f5f5e",
+                  "title": "Physics Contest Week 3",
+                  "mode": "marathon",
+                  "description": "Don't Miss It. Starts on Monday April 19, 2023 at 00:00:00LT",
+                  "sponsor": "Sponsored by Birhanu Nega",
+
+                  "problems": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5f"
+                    }
+                  ],
+                  "startTime": "2023-12-06T15:16:10.583Z",
+                  "duration": "200",
+                  "participants": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5c",
+                      "registeredAt": "2023-12-06T15:16:10.583Z"
+                    }
+                  ],
+                  "creator": {
+                    "id": "5f7f5f5f5f5f5f5f5f5f5f5c"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update contest by id",
+        "tags": ["Contests"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Contest id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Contest data",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Contest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully update contest by id",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "5f7f5f5f5f5f5f5f5f5f5f5e",
+                  "title": "Physics Contest Week 3",
+                  "mode": "marathon",
+                  "description": "Don't Miss It. Starts on Monday April 19, 2023 at 00:00:00LT",
+                  "sponsor": "Sponsored by Birhanu Nega",
+
+                  "problems": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5f"
+                    }
+                  ],
+                  "startTime": "2023-12-06T15:16:10.583Z",
+                  "duration": "200",
+                  "participants": [
+                    {
+                      "id": "5f7f5f5f5f5f5f5f5f5f5f5c",
+                      "registeredAt": "2023-12-06T15:16:10.583Z"
+                    }
+                  ],
+                  "creator": {
+                    "id": "5f7f5f5f5f5f5f5f5f5f5f5c"
                   }
                 }
               }
